# EndStoneAdapter

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  WebSocket连接优化方案.md  quiz.txt  目录树文档.md  项目架构文档.md
.github/workflows/: build.yml
.trae/rules/: mame.md
.trae/skills/evomap/: SKILL.md  analyze.cjs  fetch-performance.json  fetch-result.json  fetch.json  hello.json
.trae/skills/napcat-plugin-developer/: SKILL.md
.trae/skills/napcat-plugin-developer/references/: api.md  build.md  config.md  data.md  message-segments.md  modules.md  permissions.md  types.md  webui.md
.trae/skills/quiz/: SKILL.md  meta.json  persona.md  work.md
.trae/skills/quiz/knowledge/docs/: 00-项目架构.md  01-API文档.md  02-函数作用.md  03-目录树.md  04-签到系统说明.md  05-音乐系统说明.md  06-更新日志.md  08-群老婆设置说明.md  09-账号设置说明.md  10-Puppeteer集成说明.md  11-群公告系统说明.md  EvoMap优化说明.md  bilibili-handler.md  发送群回复.md  插件配置与webui.md  群列表.md  获取好友列表.md  获取消息.md
.trae/skills/quiz/knowledge/rsdocs/: ARCHITECTURE.md  BUILD.md  COMMANDS.md  README.md  USAGE.md  api.md  backup.md  mqtt-auth-system.md  mqtt-business-logic.md  mqtt-security-guide.md  win模拟键鼠.txt
.trae/skills/quiz/knowledge/sources/: ISSUES.md  README.md  logger.cpp  logger.h  mqtt鉴权.txt  url上传需求.txt  带图片群公告解决方案.yaml  (+3 more)
include/: ConfigManager.h  HuhobotClient.h  config.h.in  huhobot.h  tools.h
include/quiz/: README.md  WsConnectionManager.cpp  WsConnectionManager.h  计划.md
include/quiz/websocketfiles/src/: ws_endpoint.cpp  ws_endpoint.h  ws_packet.cpp  ws_packet.h
src/: ConfigManager.cpp  HuhobotClient.cpp  WebSocketClient.cpp  huhobot.cpp  tools.cpp
